--- a/src/index.css
+++ b/src/index.css
@@ -28,15 +28,12 @@
     -webkit-overflow-scrolling: touch; /* iOS momentum scrolling */
   }
   
-  /* Hardware acceleration for everything */
+  /* Hardware acceleration for everything - REMOVED TO FIX POSITION FIXED */
   * {
     -webkit-tap-highlight-color: transparent;
     -webkit-touch-callout: none;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    /* Force GPU rendering */
-    transform: translateZ(0);
-    -webkit-transform: translateZ(0);
   }
   
   /* Optimize font rendering */
